# sovereign-robotics-ops

./: .env.example  .gitignore  DEPLOY_FLY.md  DEPLOY_VERCEL.md  Dockerfile.fly  Procfile  README.md  docker-compose.vultr.yml  docker-compose.yml  fly.toml  package.json  vercel.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7d94d745f552_initial_schema.py  8f1c3d2a9b24_add_operator_approvals.py  a1b2c3d4e5f6_add_events_run_id_index.py  b1f8a7c2d4e6_align_mission_audit_schema.py  c3d5e7f9a1b2_add_circuit_breaker_state.py  c3e5f7a9b1d2_add_policy_version.py  c3e5f8a1b2d4_add_governance_decisions.py  d4e6f8a1b2c3_add_agent_memory.py  e5f7a8b2c3d4_add_policy_versions_run_safety.py  f1a2b3c4d5e6_merge_heads.py
backend/app/: config.py  deps.py  http_middleware.py  main.py  preflight.py  world_model.py
backend/app/api/: routes_compliance.py  routes_governance.py  routes_health.py  routes_llm.py  routes_missions.py  routes_operator.py  routes_runs.py  routes_sim.py  routes_ws.py
backend/app/auth/: jwt.py  routes.py
backend/app/db/: models.py  session.py
backend/app/observability/: logging.py
backend/app/policies/: policy_catalog.yaml  rules_python.py  versioning.py
backend/app/schemas/: __init__.py  events.py  governance.py  mission.py  run.py  sim.py  telemetry.py
backend/app/services/: agent_service.py  (+22 more)
backend/tests/: conftest.py  test_api_smoke.py  test_governance.py  test_new_services.py  test_phase_abc.py  test_phase_d.py  test_plan_execution.py  test_reward_hacking.py  test_startup_cleanup.py
(+71 files in other folders)
